Update default gams solver

--- a/benchmark_config.json
+++ b/benchmark_config.json
@@ -21,6 +21,9 @@
     "nlp_solver": "ipopt",
     "mip_solver": "gurobi",
     "separation_solver": "gurobi",
-    "minlp_solver": "gams"
+    "minlp_solver": "gams",
+    "minlp_solver_args": {
+      "solver": "baron"
+    },
   }
 }
