Update default settings

--- a/benchmark_config.json
+++ b/benchmark_config.json
@@ -23,7 +23,7 @@
     "separation_solver": "gurobi",
     "minlp_solver": "gams",
     "minlp_solver_args": {
-      "solver": "baron"
-    },
+      "solver": "ipopt"
+    }
   }
 }
