--- a/benchmark_config.json
+++ b/benchmark_config.json
@@ -23,7 +23,13 @@
     "separation_solver": "gurobi",
     "minlp_solver": "gams",
     "minlp_solver_args": {
-      "solver": "ipopt"
+      "solver": "ipopt",
+      "add_options": [
+            "option reslim = 3600;",
+            "option optcr = 1e-8;",
+            "option optca = 1e-8;",
+            "option threads = 1;",
+        ]
     }
   }
 }
