--- a/benchmark_config.json
+++ b/benchmark_config.json
@@ -21,20 +21,23 @@
     "nlp_solver": "ipopt",
     "mip_solver": "gurobi",
     "separation_solver": "gurobi",
-    "minlp_solver": "ipopt",
+    "minlp_solver": "gams",
     "minlp_solver_args": {
-      "options": {
-        "mu_strategy": "adaptive",     
-        "tol": 1e-6,                  
-        "acceptable_tol": 1e-5,        
-        "acceptable_iter": 15,         
-        "bound_push": 0.01,           
-        "bound_frac": 0.01,            
-        "mumps_pivtol": 1e-4,          
-        "mumps_pivtolmax": 0.1,       
-        "max_iter": 5000,              
-        "diverging_iterates_tol": 1e20
-      }
+      "solver": "conopt",
+      "add_options": [
+        "option reslim = 3600;",       
+        "option iterlim = 5000;",      
+        "$onecho > conopt.opt",
+        "rtnwma 1e-06",
+        "rtnopt 1e-06",
+        "lstall 15",
+        "rtvmin 1e-08",
+        "lsmeth 2",
+        "lsisol 1",
+        "rtmaxv 1.0e10",
+        "$offecho",
+        "GAMS_MODEL.optfile = 1;"      
+      ]
     }
   }
 }
